# classification-toxic

./: .gitignore  Makefile  README.md  ci.yml.template  pyproject.toml  report.md  requirements-dev.txt  requirements.txt
configs/: base.yaml  smoke.yaml
data/: README.md
data/tiny/: test.csv  tokenizer.json  train.csv  val.csv
docs/results/: metrics.json  per_identity.csv
docs/results/eda/: full_eda_log.txt  identity_comention.csv  identity_coverage.csv  identity_drift.csv  summary.json
scripts/: eda.py  make_tiny_subset.py
src/toxic_classifier/: eval.py  infer.py  metrics.py  train.py  utils.py
src/toxic_classifier/data/: dataset.py  prepare.py  split.py  tokenizer.py
src/toxic_classifier/model/: classifier.py  transformer.py
tests/: test_attention_mask.py  test_metrics.py  test_model_shapes.py  test_smoke.py  test_split.py
