[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toxic-classifier"
version = "0.1.0"
description = "From-scratch pre-LayerNorm Transformer for toxic-comment classification (Jigsaw Unintended Bias)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rishabh0203iitr", email = "rishabh.2000.rs@gmail.com" }]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "iterative-stratification>=0.1.7",
    "tokenizers>=0.15",
    "tqdm>=4.66",
    "wandb>=0.16",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "pre-commit>=3.5",
    "jupyter>=1.0",
    "ipykernel>=6.25",
]

[project.scripts]
toxic-train = "toxic_classifier.train:main"
toxic-eval = "toxic_classifier.eval:main"
toxic-prepare = "toxic_classifier.data.prepare:main"
toxic-infer = "toxic_classifier.infer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
toxic_classifier = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
# N806: ML code routinely uses B, L, D, H for batch / seq / dim / heads — keep that style.
# E501: line length — handled by formatter, ignore in linter.
ignore = ["E501", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
